WIP experimental code

--- a/repepo/experiments/evaluate_base_propensity.ipynb
+++ b/repepo/experiments/evaluate_base_propensity.ipynb
@@ -25,12 +25,15 @@
    "outputs": [],
    "source": [
     "from repepo.steering.sweeps.evaluate_base_propensity import iter_configs\n",
-    "from repepo.steering.utils.helpers import load_eval_result\n",
+    "from repepo.steering.run_sweep import run_sweep, load_sweep_results\n",
     "\n",
-    "configs_and_results = []\n",
-    "for config in iter_configs():\n",
-    "    eval_result = load_eval_result(config.eval_hash)\n",
-    "    configs_and_results.append((config, eval_result))\n"
+    "RUN = False\n",
+    "configs = list(iter_configs())\n",
+    "\n",
+    "if RUN:\n",
+    "    run_sweep(configs)\n",
+    "\n",
+    "results = load_sweep_results(configs)\n"
    ]
   },
   {
@@ -39,19 +42,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for config, result in configs_and_results:\n",
-    "#    print(f\"{config.train_dataset}: \\t logit_diff = {result.metrics['mean_logit_diff']:.2f} +/- {result.metrics['std_logit_diff']:.2f}\")\n",
+    "from repepo.steering.plots.utils import make_results_df, get_config_fields\n",
     "\n",
-    "# Construct a dataframe\n",
-    "import pandas as pd\n",
-    "df = pd.DataFrame([{\n",
-    "    'train_dataset': config.train_dataset,\n",
-    "    'mean_logit_diff': result.metrics['mean_logit_diff'],\n",
-    "    'std_logit_diff': result.metrics['std_logit_diff'],\n",
-    "    'mean_pos_prob': result.metrics['mean_pos_prob'],\n",
-    "    'std_pos_prob': result.metrics['std_pos_prob'],\n",
-    "} for config, result in configs_and_results])\n",
-    "\n",
+    "df = make_results_df(results)\n",
+    "print(len(df))\n",
     "df.head()"
    ]
   },
@@ -68,17 +62,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bar plot of the logit_diff\n",
-    "import matplotlib.pyplot as plt\n",
+    "# Plot the mean pos prob\n",
     "import seaborn as sns\n",
-    "sns.set_theme(style=\"whitegrid\")\n",
-    "# ax = sns.barplot(y=\"train_dataset\", x=\"logit_diff\", data=df)\n",
-    "# TODO: Can I color-code the xticks? \n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
-    "ax.errorbar(df.mean_logit_diff, df.train_dataset, xerr=df.std_logit_diff, fmt='o', color = 'blue')\n",
-    "ax.axvline(x=0, color='black', linestyle='--')\n",
-    "ax.set_title(\"Base propensity (logit diff)\")\n",
-    "plt.show()"
+    "ax.errorbar(df.mean_pos_prob, df.train_dataset, xerr=df.std_pos_prob, fmt='o', color = 'blue')\n",
+    "ax.axvline(x=0.5, color='black', linestyle='--')\n",
+    "ax.set_title(\"Base propensity (pos prob)\")\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -87,18 +79,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bar plot of the logit_diff\n",
-    "import matplotlib.pyplot as plt\n",
+    "# Plot the mean pos prob\n",
     "import seaborn as sns\n",
-    "sns.set_theme(style=\"whitegrid\")\n",
-    "# ax = sns.barplot(y=\"train_dataset\", x=\"logit_diff\", data=df)\n",
-    "# TODO: Can I color-code the xticks? \n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
-    "ax.errorbar(df.mean_pos_prob, df.train_dataset, xerr=df.std_pos_prob, fmt='o', color = 'green')\n",
+    "ax.errorbar(df.mean_logit_diff, df.train_dataset, xerr=df.std_logit_diff, fmt='o', color = 'blue')\n",
     "ax.axvline(x=0.5, color='black', linestyle='--')\n",
-    "ax.set_title(\"Base propensity (pos prob)\")\n",
-    "plt.show()\n",
-    "\n"
+    "ax.set_title(\"Base propensity (logit diff)\")\n",
+    "plt.show()\n"
    ]
   }
  ],
