--- a/repepo/experiments/evaluate_steering_efficiency_across_datasets.ipynb
+++ b/repepo/experiments/evaluate_steering_efficiency_across_datasets.ipynb
@@ -23,46 +23,28 @@
    "outputs": [],
    "source": [
     "from repepo.steering.sweeps.evaluate_steering_efficiency_across_datasets import iter_configs\n",
-    "from repepo.steering.utils.helpers import load_eval_result, get_eval_result_path, get_experiment_path\n",
+    "from repepo.steering.run_sweep import run_sweep, load_sweep_results\n",
     "\n",
-    "configs_and_results = []\n",
-    "for config in iter_configs():\n",
-    "    try:\n",
-    "        eval_result = load_eval_result(config.eval_hash)\n",
-    "        configs_and_results.append((config, eval_result))\n",
-    "    except: \n",
-    "        print(config.eval_hash)\n",
+    "RUN = False\n",
+    "configs = list(iter_configs())\n",
+    "\n",
+    "if RUN:\n",
+    "    run_sweep(configs)\n",
+    "\n",
+    "results = load_sweep_results(configs)\n",
     "    \n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pedagogical example of how to compute steering efficiency"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for config, result in configs_and_results:\n",
-    "#    print(f\"{config.train_dataset}: \\t logit_diff = {result.metrics['mean_logit_diff']:.2f} +/- {result.metrics['std_logit_diff']:.2f}\")\n",
+    "from repepo.steering.plots.utils import make_results_df, get_config_fields\n",
     "\n",
-    "# Construct a dataframe\n",
-    "import pandas as pd\n",
-    "df = pd.DataFrame([{\n",
-    "    'train_dataset': config.train_dataset,\n",
-    "    'layer': config.layer,\n",
-    "    'multiplier': config.multiplier,\n",
-    "    'mean_logit_diff': result.metrics['mean_logit_diff'],\n",
-    "    'std_logit_diff': result.metrics['std_logit_diff'],\n",
-    "    'mean_pos_prob': result.metrics['mean_pos_prob'],\n",
-    "    'std_pos_prob': result.metrics['std_pos_prob'],\n",
-    "} for config, result in configs_and_results])\n",
-    "\n",
+    "df = make_results_df(results)\n",
+    "print(len(df))\n",
     "df.head()"
    ]
   },
@@ -72,63 +54,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "from repepo.utils.stats import bernoulli_js_dist\n",
     "\n",
-    "def plot_steering_efficiency(df, dataset, layer):\n",
-    "    data_df = df[(df.train_dataset == dataset) & (df.layer == layer)]\n",
+    "# Compute sample-wise Jenson-Shannon divergence from different multipliers\n",
     "\n",
-    "    multipliers = data_df.multiplier.unique()\n",
-    "    multipliers.sort()\n",
-    "    layers = data_df.layer.unique()\n",
-    "    layers.sort()\n",
+    "config_fields = get_config_fields()\n",
+    "fields = config_fields + [\"test_positive_example\", \"test_negative_example\"]\n",
+    "fields.remove(\"multiplier\")\n",
     "\n",
-    "    slope, intercept = np.polyfit(multipliers, data_df.mean_logit_diff, 1)\n",
-    "    plt.figure(figsize=(10, 6))\n",
-    "    for layer in layers:\n",
-    "        layer_df = data_df[data_df.layer == layer]\n",
-    "        plt.errorbar(layer_df.multiplier, layer_df.mean_logit_diff, yerr=layer_df.std_logit_diff, fmt='o', label=layer)\n",
-    "        plt.plot(multipliers, slope * multipliers + intercept, label='Linear fit')\n",
-    "    plt.xlabel('Steering multiplier')\n",
-    "    plt.ylabel('Mean logit difference')\n",
-    "    plt.title(f'Steering efficiency for {dataset}')\n",
-    "    plt.legend()\n",
+    "def compute_js_div(group):\n",
+    "    \"\"\" \n",
+    "    Within a group, we have the exact same SV and eval example, but different multipliers. \n",
+    "    So we should compute the JS divergence to the zero multiplier\n",
+    "    and store it in the group.\n",
+    "    \"\"\"    \n",
+    "    zero_multiplier = group[group.multiplier == 0].pos_prob.values[0]\n",
+    "    js_div = group.apply(lambda x: bernoulli_js_dist(zero_multiplier, x.pos_prob), axis=1)\n",
+    "    return js_div\n",
     "\n",
-    "datasets = df.train_dataset.unique()\n",
-    "for dataset in datasets:\n",
-    "    layer = 13\n",
-    "    plot_steering_efficiency(df, dataset, layer)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Compute the steering efficiency"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Group results by (train_dataset, layer)\n",
-    "grouped = df.groupby(['train_dataset', 'layer'])\n",
-    "# Fit a linear model of (mean logit diff) vs (multiplier)\n",
-    "import numpy as np\n",
-    "\n",
-    "def compute_steering_efficiency(row):\n",
-    "    x = row.multiplier\n",
-    "    y = row.mean_logit_diff\n",
-    "    (slope, _), res, rank, sv, rcond = np.polyfit(x, y, 1, full=True)\n",
-    "    return pd.Series({'steering_efficiency': slope, 'residuals': np.sqrt(res).item()})\n",
-    "\n",
-    "steering_efficiency_df = grouped.apply(compute_steering_efficiency)\n",
-    "# merge back into original df\n",
-    "df = df.merge(steering_efficiency_df, left_on=['train_dataset', 'layer'], right_index=True)\n",
+    "grouped = df.groupby(fields, as_index = False)[['multiplier', 'pos_prob']]\n",
+    "df['js_div'] = grouped.apply(compute_js_div).reset_index(level=0, drop=True)\n",
     "df.head()"
    ]
   },
@@ -138,21 +83,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select only dataset name, layer, and steering efficiency\n",
-    "data_df = df[['train_dataset', 'layer', 'steering_efficiency']]\n",
-    "data_df = data_df.drop_duplicates()\n",
-    "print(len(data_df))\n",
+    "small_df = df[df.train_dataset == \"power-seeking-inclination\"]\n",
+    "print(len(small_df))\n",
+    "small_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = 10\n",
     "\n",
-    "# Bar plot of steering efficiency\n",
+    "# Filter down to k randomly-chosen test_positive_example\n",
+    "examples_to_keep = small_df.test_positive_example[:k]\n",
+    "small_df = small_df[small_df.test_positive_example.isin(examples_to_keep)]\n",
+    "# Convert test_positive_example to an index\n",
+    "small_df['example_index'] = small_df.test_positive_example.astype('category').cat.codes.astype(str)\n",
+    "print(len(small_df))\n",
+    "\n",
+    "# Plot the JS divergence for each test_positive_example\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "sns.set_theme(style=\"whitegrid\")\n",
-    "plot = sns.catplot(\n",
-    "    data=data_df, kind=\"bar\",\n",
-    "    y=\"train_dataset\", x=\"steering_efficiency\", hue=\"train_dataset\",\n",
-    "    palette=\"dark\", alpha=.6, height=6\n",
-    ")\n",
-    "plt.title('Steering efficiency across datasets')\n"
+    "\n",
+    "sns.lineplot(data=small_df, x='multiplier', y='js_div', hue='example_index')"
    ]
   },
   {
@@ -161,15 +116,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bar plot of residuals\n",
-    "residuals_df = df[['train_dataset', 'layer', 'residuals']]\n",
-    "residuals_df = residuals_df.drop_duplicates()\n",
-    "plot = sns.catplot(\n",
-    "    data=residuals_df, kind=\"bar\",\n",
-    "    y=\"train_dataset\", x=\"residuals\", hue=\"train_dataset\",\n",
-    "    palette=\"dark\", alpha=.6, height=6\n",
-    ")\n",
-    "plt.title('Residuals error of linear fit of steering efficiency')"
+    "# Plot Js div vs mean pos prob at zero\n",
+    "pos_prob_at_zero = small_df[small_df.multiplier == 0][['example_index', 'pos_prob']]\n",
+    "print(len(pos_prob_at_zero))\n",
+    "# merge\n",
+    "small_df = small_df.merge(pos_prob_at_zero, on='example_index', suffixes=('', '_at_zero'))\n",
+    "small_df.head()"
    ]
   },
   {
@@ -178,15 +130,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot the steering efficiency divided by residuals\n",
-    "efficiency_div_residuals = data_df.merge(residuals_df, on=['train_dataset', 'layer'])\n",
-    "efficiency_div_residuals['efficiency_div_residuals'] = efficiency_div_residuals.steering_efficiency / efficiency_div_residuals.residuals\n",
-    "efficiency_div_residuals = efficiency_div_residuals.drop(columns=['steering_efficiency', 'residuals'])\n",
-    "efficiency_div_residuals = efficiency_div_residuals.drop_duplicates()\n",
-    "plot = sns.catplot(\n",
-    "    data=efficiency_div_residuals, kind=\"bar\",\n",
-    "    y=\"train_dataset\", x=\"efficiency_div_residuals\", hue=\"train_dataset\",\n",
-    "    palette=\"dark\", alpha=.6, height=6\n",
+    "\n",
+    "sns.scatterplot(data=small_df, x='pos_prob_at_zero', y='js_div', hue='example_index')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Plot steering efficiency\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by steering vectors and examples, but not multiplier\n",
+    "fields = config_fields + ['test_positive_example']\n",
+    "fields.remove(\"multiplier\")\n",
+    "\n",
+    "steering_efficiency_df = (\n",
+    "    # Here, a group consists of the same SV and example for different multipliers\n",
+    "    df.groupby(fields, as_index=False)['js_div']\n",
+    "    # Compute steering efficiency as the range of JS div across multipliers\n",
+    "    .agg(lambda x: x.max() - x.min())\n",
+    "    .rename(columns={'js_div': 'steering_efficiency'})\n",
     ")"
    ]
   },
@@ -196,16 +166,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Visualize self-replication, which had highest efficiency divided by residuals\n",
-    "# self_replication_df = df[df.train_dataset == 'self-replication']\n",
-    "# self_replication_df = self_replication_df[['layer', 'multiplier', 'mean_logit_diff', 'std_logit_diff']]\n",
-    "# self_replication_df = self_replication_df.drop_duplicates()\n",
-    "# multipliers = self_replication_df.multiplier.unique()\n",
-    "# multipliers.sort()\n",
-    "# slope, intercept = np.polyfit(multipliers, self_replication_df.mean_logit_diff, 1)\n",
-    "# plt.figure()\n",
-    "# plt.title(\"Self-replication\")\n",
-    "# plt.errorbar(self_replication_df.multiplier, self_replication_df.mean_logit_diff, yerr=self_replication_df.std_logit_diff, fmt='o', label='Self-replication')"
+    "print(len(steering_efficiency_df))\n",
+    "steering_efficiency_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For each dataset, take the mean of steering efficiency over all test_positive_examples\n",
+    "grouped = steering_efficiency_df.groupby(\"train_dataset\", as_index=False)\n",
+    "mean_steering_efficiency = grouped['steering_efficiency'].mean()\n",
+    "# Add back in 'mean_pos_prob'\n",
+    "mean_steering_efficiency = mean_steering_efficiency.merge(\n",
+    "    df[['train_dataset', 'multiplier', 'mean_pos_prob']].drop_duplicates(),\n",
+    "    on='train_dataset'\n",
+    ")\n",
+    "print(mean_steering_efficiency.columns)\n",
+    "\n",
+    "sns.set_theme(font_scale = 0.5)\n",
+    "sns.barplot(data=mean_steering_efficiency, y='train_dataset', x='steering_efficiency')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from repepo.steering.sweeps.constants import ALL_ABSTRACT_CONCEPT_DATASETS\n",
+    "\n",
+    "sns.set_theme()\n",
+    "sns.barplot(\n",
+    "    data=mean_steering_efficiency[mean_steering_efficiency['train_dataset'].isin(ALL_ABSTRACT_CONCEPT_DATASETS)], \n",
+    "    y='train_dataset', x='steering_efficiency'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scatterplot of steering efficiency vs mean pos prob\n",
+    "limited_df = mean_steering_efficiency\n",
+    "# limited_df = mean_steering_efficiency[mean_steering_efficiency['train_dataset'].isin(ALL_ABSTRACT_CONCEPT_DATASETS)]\n",
+    "\n",
+    "temp_df = limited_df[limited_df['multiplier'] == 0]\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "sns.scatterplot(data=temp_df, x='mean_pos_prob', y='steering_efficiency', hue='train_dataset', ax = ax)\n",
+    "# Plot linar regression line\n",
+    "import numpy as np\n",
+    "slope, intercept = np.polyfit(temp_df['mean_pos_prob'], temp_df['steering_efficiency'], 1)\n",
+    "x = np.linspace(0, 1, 100)\n",
+    "y = slope * x + intercept\n",
+    "sns.lineplot(x=x, y=y, ax = ax, color='orange')\n",
+    "\n",
+    "ax.set_title(\"Steering efficiency vs mean pos prob\")\n",
+    "ax.legend(loc='center left', bbox_to_anchor=(1, 0.5))"
    ]
   }
  ],
