--- a/repepo/notebooks/ablate_aggregator.ipynb
+++ b/repepo/notebooks/ablate_aggregator.ipynb
@@ -11,18 +11,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 0. Run Experiment"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
     "from repepo.steering.sweeps.constants import (\n",
     "    ALL_ABSTRACT_CONCEPT_DATASETS,\n",
     "    ALL_TOKEN_CONCEPT_DATASETS, \n",
@@ -44,7 +42,16 @@
     "from repepo.steering.plots.utils import (\n",
     "    get_config_fields,\n",
     "    make_results_df\n",
-    ")"
+    ")\n",
+    "\n",
+    "sns.set_theme()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 0. Run Experiment"
    ]
   },
   {
@@ -299,10 +306,121 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion (6 Apr)\n",
+    "## Conclusion (6 Apr)\n",
     "\n",
     "- For now, it seems like the SVs found by logistic-regression are significantly different from SVs found via mean-difference, and it's unclear why this would be the case? \n",
-    "- One reason may be the decomposed model we discussed earlier... Need to validate this"
+    "- One reason may be the decomposed model we discussed earlier..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Optimizing layers for differnt aggregators\n",
+    "\n",
+    "One caveat with the above is that the optimal steering layers for different aggregators may be different. Layer 13 is what we think works best for mean difference; but we have not optimized layer for logistic regression\n",
+    "\n",
+    "Here, if we find that the optimal steering layers are different, this could indicate a causal model where the representation of *understanding* differs from the representation of *intention*. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from repepo.notebooks.run_sweep_ablate_aggregator import iter_config\n",
+    "\n",
+    "configs = list(iter_config())\n",
+    "results = load_sweep_results(configs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Construct a DataFrame from the results.\n",
+    "df = make_results_df(results)\n",
+    "print(len(df))\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_steering_efficiency(\n",
+    "    df: pd.DataFrame, \n",
+    "    base_metric_name: str = \"logit_diff\"\n",
+    "):\n",
+    "    df = df.copy()\n",
+    "    # Group by examples\n",
+    "    fields_to_group_by = get_config_fields()\n",
+    "    fields_to_group_by.remove(\"multiplier\")\n",
+    "    fields_to_group_by += [\"test_positive_example.text\"]\n",
+    "\n",
+    "    grouped = df.groupby(fields_to_group_by)\n",
+    "\n",
+    "    def fit_linear_regression(df: pd.DataFrame):\n",
+    "        # Fit a linear regression of the base metric on the multiplier\n",
+    "        # Return the slope and error of the fit \n",
+    "        x = df[\"multiplier\"].to_numpy()\n",
+    "        y = df[base_metric_name].to_numpy()        \n",
+    "        (slope, intercept), residuals, _, _, _ = np.polyfit(x, y, 1, full=True)\n",
+    "        # Return a dataframe with the slope and residuals\n",
+    "        return pd.DataFrame({\n",
+    "            \"slope\": [slope],\n",
+    "            \"residual\": [residuals.item()]\n",
+    "        })\n",
+    "\n",
+    "    # Apply a linear-fit to each group using grouped.apply\n",
+    "    slopes = grouped.apply(fit_linear_regression, include_groups = False)\n",
+    "    df = df.merge(slopes, on=fields_to_group_by, how='left')\n",
+    "    return df \n",
+    "\n",
+    "df = calculate_steering_efficiency(df)\n",
+    "print(len(df))\n",
+    "\n",
+    "# Scatter plot of the slopes and residuals\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "sns.scatterplot(data=df, x=\"slope\", y=\"residual\", ax=ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot layer response curve. \n",
+    "# For each layer, plot steerability \n",
+    "\n",
+    "def plot_layer_response_curve(df):\n",
+    "    train_dataset = df['train_dataset'].unique()\n",
+    "    assert len(train_dataset) == 1, \"Expected only one train dataset\"\n",
+    "\n",
+    "    test_dataset = df['test_dataset'].unique()\n",
+    "    assert len(test_dataset) == 1, \"Expected only one test dataset\"\n",
+    "    assert train_dataset == test_dataset, \"Expected train and test dataset to be the same\"\n",
+    "    dataset = train_dataset[0]\n",
+    "\n",
+    "    fig, ax = plt.subplots(1, 1, figsize=(10, 5))\n",
+    "    sns.lineplot(data=df, x=\"layer\", y=\"slope\", hue=\"aggregator\", ax=ax)\n",
+    "    ax.set_title(f\"Steerability of {dataset}\")\n",
+    "\n",
+    "plot_layer_response_curve(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remarks\n",
+    "- Logistic regression seems not to work at all, which is weird... "
    ]
   }
  ],
