--- a/repepo/notebooks/evaluate_generalization.ipynb
+++ b/repepo/notebooks/evaluate_generalization.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook aims to visualize the steering metric across multiple datasets. "
+    "# Evaluating Generalization of Steering Vectors\n",
+    "\n",
+    "In this notebook, we will evaluate how well steering vectors generalize to novel contexts (as defined via languages or 'styles' of speaking). "
    ]
   },
   {
@@ -47,24 +49,56 @@
     "\n",
     "from itertools import product\n",
     "\n",
-    "debug_setting = {\n",
-    "    \"datasets\": [\"power-seeking-inclination\"],\n",
+    "abstract_setting = {\n",
+    "    # \"datasets\": ALL_ABSTRACT_CONCEPT_DATASETS,\n",
+    "    \"datasets\": [\n",
+    "        \"anti-immigration\",\n",
+    "        \"conscientiousness\",\n",
+    "        \"self-replication\",\n",
+    "        \"corrigible-neutral-HHH\",\n",
+    "        \"myopic-reward\",\n",
+    "        \"power-seeking-inclination\",\n",
+    "        \"sycophancy_train\",\n",
+    "        \"truthfulqa\",\n",
+    "    ],\n",
     "    \"layers\": [13],\n",
     "    \"multipliers\": [-1.0, 0.0, 1.0]\n",
     "}\n",
     "\n",
+    "linguistic_setting = {\n",
+    "    \"datasets\": [\n",
+    "        \"D03 [adj+ly_reg]\",\n",
+    "        \"D07 [verb+able_reg]\",\n",
+    "        \"I06 [verb_inf - Ving]\",\n",
+    "    ],\n",
+    "    \"layers\": [13],\n",
+    "    \"multipliers\": [-1.0, 0.0, 1.0]\n",
+    "}\n",
     "\n",
-    "def iter_config(setting):\n",
+    "def iter_config():\n",
     "    for dataset, layer, multiplier in product(\n",
-    "        setting[\"datasets\"], \n",
-    "        setting[\"layers\"], \n",
-    "        setting[\"multipliers\"]\n",
+    "        abstract_setting[\"datasets\"], \n",
+    "        abstract_setting[\"layers\"], \n",
+    "        abstract_setting[\"multipliers\"]\n",
     "    ):\n",
     "        yield get_abstract_concept_config(\n",
     "            dataset=dataset,\n",
     "            layer=layer,\n",
     "            multiplier=multiplier\n",
-    "        )\n"
+    "        )\n",
+    "\n",
+    "    # TODO: Need to implement translated token-level datasets before we can do this\n",
+    "    \n",
+    "    # for dataset, layer, multiplier in product(\n",
+    "    #     linguistic_setting[\"datasets\"], \n",
+    "    #     linguistic_setting[\"layers\"], \n",
+    "    #     linguistic_setting[\"multipliers\"]\n",
+    "    # ):\n",
+    "    #     yield get_token_concept_config(\n",
+    "    #         dataset=dataset,\n",
+    "    #         layer=layer,\n",
+    "    #         multiplier=multiplier\n",
+    "    #     )\n"
    ]
   },
   {
@@ -75,11 +109,11 @@
    "source": [
     "# Optionally, run the sweep and load results. \n",
     "# If sweep was already run, set RUN = False.\n",
-    "RUN = True\n",
+    "RUN = False\n",
     "\n",
-    "configs = list(iter_config(debug_setting))\n",
+    "configs = list(iter_config())\n",
     "if RUN:\n",
-    "    run_sweep(configs, force_rerun_apply=True)\n",
+    "    run_sweep(configs)\n",
     "\n",
     "results = load_sweep_results(configs)"
    ]
