--- a/repepo/notebooks/evaluate_steerability.ipynb
+++ b/repepo/notebooks/evaluate_steerability.ipynb
@@ -17,14 +17,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from repepo.steering.sweeps.constants import (\n",
-    "    ALL_ABSTRACT_CONCEPT_DATASETS,\n",
-    "    ALL_TOKEN_CONCEPT_DATASETS, \n",
-    "    ALL_LANGUAGES,\n",
-    "    ALL_LLAMA_7B_LAYERS,\n",
-    "    ALL_MULTIPLIERS\n",
-    ")\n",
-    "\n",
     "from repepo.steering.sweeps.configs import (\n",
     "    get_abstract_concept_config,\n",
     "    get_token_concept_config\n",
@@ -48,57 +40,7 @@
    "outputs": [],
    "source": [
     "# Define the sweep to run over. \n",
-    "\n",
-    "from itertools import product\n",
-    "\n",
-    "abstract_setting = {\n",
-    "    # \"datasets\": ALL_ABSTRACT_CONCEPT_DATASETS,\n",
-    "    \"datasets\": [\n",
-    "        \"anti-immigration\",\n",
-    "        \"conscientiousness\",\n",
-    "        \"self-replication\",\n",
-    "        \"corrigible-neutral-HHH\",\n",
-    "        \"myopic-reward\",\n",
-    "        \"power-seeking-inclination\",\n",
-    "        \"sycophancy_train\",\n",
-    "        \"truthfulqa\",\n",
-    "    ],\n",
-    "    \"layers\": [13],\n",
-    "    \"multipliers\": [-1.0, 0.0, 1.0]\n",
-    "}\n",
-    "\n",
-    "linguistic_setting = {\n",
-    "    \"datasets\": [\n",
-    "        \"D03 [adj+ly_reg]\",\n",
-    "        \"D07 [verb+able_reg]\",\n",
-    "        \"I06 [verb_inf - Ving]\",\n",
-    "    ],\n",
-    "    \"layers\": [13],\n",
-    "    \"multipliers\": [-1.0, 0.0, 1.0]\n",
-    "}\n",
-    "\n",
-    "def iter_config():\n",
-    "    for dataset, layer, multiplier in product(\n",
-    "        abstract_setting[\"datasets\"], \n",
-    "        abstract_setting[\"layers\"], \n",
-    "        abstract_setting[\"multipliers\"]\n",
-    "    ):\n",
-    "        yield get_abstract_concept_config(\n",
-    "            dataset=dataset,\n",
-    "            layer=layer,\n",
-    "            multiplier=multiplier\n",
-    "        )\n",
-    "\n",
-    "    for dataset, layer, multiplier in product(\n",
-    "        linguistic_setting[\"datasets\"], \n",
-    "        linguistic_setting[\"layers\"], \n",
-    "        linguistic_setting[\"multipliers\"]\n",
-    "    ):\n",
-    "        yield get_token_concept_config(\n",
-    "            dataset=dataset,\n",
-    "            layer=layer,\n",
-    "            multiplier=multiplier\n",
-    "        )\n"
+    "from repepo.notebooks.run_sweep_evaluate_steerability import iter_config"
    ]
   },
   {
@@ -131,6 +73,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.1 Plot changes in log probs, logits"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -140,6 +96,7 @@
     "\n",
     "import seaborn as sns \n",
     "import matplotlib.pyplot as plt\n",
+    "sns.set_theme()\n",
     "\n",
     "def plot(df):\n",
     "    example = df.iloc[0]\n",
@@ -177,6 +134,88 @@
     "    # sns.lineplot(data=df, x=\"multiplier\", y=\"test_negative_token.logit_mean\", label=\"Logit mean\", ax=ax)\n",
     "\n",
     "plot(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.2 Compute steerability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def calculate_steering_efficiency(\n",
+    "    df: pd.DataFrame, \n",
+    "    base_metric_name: str = \"logit_diff\"\n",
+    "):\n",
+    "    df = df.copy()\n",
+    "    # Group by examples\n",
+    "    fields_to_group_by = get_config_fields()\n",
+    "    fields_to_group_by.remove(\"multiplier\")\n",
+    "    fields_to_group_by += [\"test_positive_example.text\"]\n",
+    "\n",
+    "    grouped = df.groupby(fields_to_group_by)\n",
+    "\n",
+    "    def fit_linear_regression(df: pd.DataFrame):\n",
+    "        # Fit a linear regression of the base metric on the multiplier\n",
+    "        # Return the slope and error of the fit \n",
+    "        x = df[\"multiplier\"].to_numpy()\n",
+    "        y = df[base_metric_name].to_numpy()        \n",
+    "        (slope, intercept), residuals, _, _, _ = np.polyfit(x, y, 1, full=True)\n",
+    "        # Return a dataframe with the slope and residuals\n",
+    "        return pd.DataFrame({\n",
+    "            \"slope\": [slope],\n",
+    "            \"residual\": [residuals.item()]\n",
+    "        })\n",
+    "\n",
+    "    # Apply a linear-fit to each group using grouped.apply\n",
+    "    slopes = grouped.apply(fit_linear_regression, include_groups = False)\n",
+    "    df = df.merge(slopes, on=fields_to_group_by, how='left')\n",
+    "    return df \n",
+    "\n",
+    "df = calculate_steering_efficiency(df)\n",
+    "print(len(df))\n",
+    "\n",
+    "# Scatter plot of the slopes and residuals\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "sns.scatterplot(data=df, x=\"slope\", y=\"residual\", ax=ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scatter plot of steerability, grouped by concept \n",
+    "\n",
+    "def plot_steering_efficiency(df):\n",
+    "    df = df.copy()\n",
+    "    # Sort the rows by the mean slope within train_dataset\n",
+    "    order = df.groupby(\"train_dataset\")[\"slope\"].median().sort_values().iloc[::-1].index\n",
+    "    \n",
+    "    fig, ax = plt.subplots(figsize=(8, 8))    \n",
+    "    sns.violinplot(data=df, x = \"slope\", y = \"train_dataset\", order=order)\n",
+    "    return ax\n",
+    "\n",
+    "plot_steering_efficiency(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remarks\n",
+    "- The spread of individual steerabilities is an indicator of how \"well-defined\" a concept is. \n",
+    "- I'm concerned that the steerability of `sycophancy` is 0, which does not correlate well with what was observed in CAA...  "
    ]
   }
  ],
